Add initial APCA checking

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "apca-w3": "^0.1.9",
         "bootstrap": "^5.2.0",
         "gh-pages": "^4.0.0",
         "stylus": "^0.58.1",
